#45322 fix out of bound issue for 'week' in some language.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -651,7 +651,7 @@ team-schedule-datepicker {
 				text-transform: uppercase;
 				-webkit-user-select: none;
 				user-select: none;
-				padding: 0 .6em;
+				padding: 0 .2em;
 				-ms-flex: 1 1 100%;
 				flex: 1 1 100%;
 				-ms-flex-item-align: stretch;
